[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.118.0",
    "uvicorn[standard]==0.23.0",
    "langchain==1.2.2",
    "langchain-openai==1.1.6",
    "langchainhub==0.1.14",
    "neo4j==5.22.0",
    "numpy==1.26.4",
    "openai>=1.109.1,<3.0.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "pydantic==2.8.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "flake8>=6.1.0",
]
